add auth user update API
